--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <!-- fires after dom, images, scripts are loaded -->
-<body onLoad="app.initialize();">
+<body onLoad="app.initialize();" style="margin:0;">
 
 
 
