--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
      <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-    <meta name="viewport" content="initial-scale=1, width=device-width, user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1, width=device-width, user-scalable=no, maximum-scale=1"/>
     <meta name="msapplication-tap-highlight" content="no" />
 
     <title>U-Vend, Inc. Depot Management</title>
 
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
     <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
+
+
+
 
     <script src="phonegap.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
@@ -37,7 +40,7 @@
 </head>
 
 <!-- fires after dom, images, scripts are loaded -->
-<body onLoad="app.initialize();" style="margin:0;">
+<body onLoad="app.initialize();">
 
 
 
