--- a/index.html
+++ b/index.html
@@ -11,9 +11,36 @@
 
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
     <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
+    <style type="text/css">
+ 
+        body {
+            /* Setting body margins to 0 to have proper positioning of #container div */
+            margin: 0;
+        }
+ 
+            /* #container div with absolute position and 100% width and height so it takes up whole window */
+        #container {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+ 
+    </style>
+
+
+
 
     <script src="phonegap.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        $(document).one("mobileinit", function () {
+ 
+            // Setting #container div as a jqm pageContainer
+            $.mobile.pageContainer = $('#container');
+ 
+        });
+    </script>
 
     <!-- hide global modal dialog div when dom is ready (before page is rendered) - this is our only hook into dom ready event -->
     <script type="text/javascript">
@@ -40,8 +67,8 @@
 <body onLoad="app.initialize();">
 
 
-
-
+<!-- jqm pages container prevents jumping on transitions -->
+<div id="container">
 
 
 <!-- splash screen -->
@@ -1147,7 +1174,7 @@
 
 
 
-
+    </div> <!-- end jqm pages container -->
 
 
 
