--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 
 
+
     <script src="phonegap.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
 
@@ -60,6 +61,20 @@
     <script src="js/jquery.validate.min.js" type="text/javascript"></script>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js" type="text/javascript"></script>
+
+    <style type="text/css">
+
+        .in {
+            -webkit-animation-timing-function: ease-in;
+            -webkit-animation-duration: 1000ms;
+        }
+
+        .out {
+            -webkit-animation-timing-function: ease-out;
+            -webkit-animation-duration: 1000ms;
+        }
+
+    </style>
 
 </head>
 
