--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 
     <style type="text/css">
 
+        .ui-page { -webkit-backface-visibility: hidden; }
+
+        /*
         .in {
             -webkit-animation-timing-function: ease-in;
             -webkit-animation-duration: 20000ms;
@@ -73,6 +76,7 @@
             -webkit-animation-timing-function: ease-out;
             -webkit-animation-duration: 20000ms;
         }
+        */
 
     </style>
 
