--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 
     <style type="text/css">
 
-        .ui-page { -webkit-backface-visibility: hidden; }
+        .ui-page * { 
+            -webkit-transform: rotateY(0deg);
+            -moz-transform: rotateY(0deg);
+            transform: rotateY(0deg);
+            -webkit-backface-visibility: hidden; 
+        }
 
     </style>
-    
+
     <style type="text/css">
  
         body {
