--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <!--  with programatically assigned href - used to prompt and redirect after form submission -->
 <div id="modalDialog" data-overlay-theme="a" data-theme="a" data-dismissible="true" style="max-width:400px;">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <h1> </h1>
     </div>
 
@@ -74,7 +74,7 @@
         <a id="modalDialogRedirect" href="#" data-role="button">OK</a>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
     </div>
 
 </div>
@@ -82,7 +82,7 @@
 <!--  with ok button set to data-rel=back - used for info popups -->
 <div id="modalDialogBack" data-overlay-theme="a" data-theme="a" data-dismissible="true" style="max-width:400px;">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <h1> </h1>
     </div>
 
@@ -91,7 +91,7 @@
         <a id="modalDialogBackRedirect" href="#" data-role="button" data-rel="back">OK</a>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
     </div>
 
 </div>
@@ -100,7 +100,7 @@
 <!-- with cancel button - used to confirm form submission -->
 <div id="modalDialogCancel" data-overlay-theme="a" data-theme="a" data-dismissible="false" style="max-width:400px;">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <h1> </h1>
     </div>
 
@@ -110,7 +110,7 @@
         <a id="modalDialogCancelCancel" href="#" data-role="button" data-rel="back" transition="flow">Cancel</a>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
     </div>
 
 </div>
@@ -118,7 +118,7 @@
     
 <div id="loginPage" data-role="page" data-theme="a">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
             <h1>U-Vend, Inc.</h1>
     </div>
 
@@ -147,7 +147,7 @@
         </form>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -157,7 +157,7 @@
 
 <div id="homePage" data-role="page" data-theme="a">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
             <h1>U-Vend, Inc.</h1>
     </div>
 
@@ -176,7 +176,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -200,7 +200,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -223,7 +223,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -242,7 +242,7 @@
 
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#routeCupsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -264,7 +264,7 @@
     </div>
 
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -280,7 +280,7 @@
 
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#routeCupsMachinesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -306,14 +306,14 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
 
 <div id="routeCupsFlavorAddPage" data-role="page" data-theme="a">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#routeCupsFlavorsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
@@ -353,14 +353,14 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
 
 <div id="routeCupsFlavorEditPage" data-role="page" data-theme="a">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#routeCupsFlavorsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
@@ -403,7 +403,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -419,7 +419,7 @@
 
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#routeCupsMachinesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
@@ -474,7 +474,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -500,7 +500,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -526,7 +526,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -535,7 +535,7 @@
 
 <div id="vanCupsFlavorsPage" data-role="page" data-theme="a">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#vanCupsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
@@ -570,7 +570,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -589,7 +589,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -620,7 +620,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -629,7 +629,7 @@
 
 <div id="vanCoinsLoadPage" data-role="page" data-theme="a">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#vanCoinsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
@@ -684,7 +684,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -710,7 +710,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -731,7 +731,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -753,7 +753,7 @@
 
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCupsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -774,7 +774,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -794,7 +794,7 @@
 
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCupsLocationsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -816,14 +816,14 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
 
 <div id="machineCupsFlavorsPage" data-role="page" data-theme="a">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCupsMachinesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -861,7 +861,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -881,7 +881,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -900,7 +900,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -922,7 +922,7 @@
 
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#machineCoinsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -942,7 +942,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -962,7 +962,7 @@
 
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#machineCoinsLocationsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -983,7 +983,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1006,7 +1006,7 @@
 
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCoinsMachinesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -1031,7 +1031,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1040,7 +1040,7 @@
 
 <div id="machineCoinsLoadPage" data-role="page" data-theme="a">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCoinsLoadPickupOptionsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -1084,7 +1084,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1096,7 +1096,7 @@
 
 <div id="machineCoinsPickupPage" data-role="page" data-theme="a">
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCoinsLoadPickupOptionsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -1140,7 +1140,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
