--- a/index.html
+++ b/index.html
@@ -12,6 +12,38 @@
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
     <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
 
+    <style type="text/css">
+ 
+        body {
+            /* Setting body margins to 0 to have proper positioning of #container div */
+            margin: 0;
+        }
+ 
+            /* #container div with absolute position and 100% width and height so it takes up whole window */
+        #container {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+ 
+    </style>
+
+    <style type="text/css">
+
+        .ui-page * { 
+            -webkit-transform: rotateY(0deg);
+            -moz-transform: rotateY(0deg);
+            transform: rotateY(0deg);
+            -webkit-backface-visibility: hidden; 
+        }
+
+    </style>
+
+
+
+
+
+
 
     <script src="phonegap.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
@@ -19,7 +51,11 @@
     <script type="text/javascript">
         $(document).one("mobileinit", function () {
  
-
+            // turn transitions off
+            $.mobile.defaultPageTransition = "none";
+            // Setting #container div as a jqm pageContainer
+            $.mobile.pageContainer = $('#container');
+ 
         });
     </script>
 
@@ -50,6 +86,10 @@
 <body onLoad="app.initialize();">
 
 
+<!-- jqm pages container prevents jumping on transitions -->
+<div id="container">
+
+
 <!-- splash screen -->
 <div id="launcherPage" data-role="page" data-theme="a">
 <!--
@@ -74,7 +114,7 @@
         <a id="modalDialogRedirect" href="#" data-role="button">OK</a>
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
     </div>
 
 </div>
@@ -91,7 +131,7 @@
         <a id="modalDialogBackRedirect" href="#" data-role="button" data-rel="back">OK</a>
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
     </div>
 
 </div>
@@ -110,7 +150,7 @@
         <a id="modalDialogCancelCancel" href="#" data-role="button" data-rel="back" transition="flow">Cancel</a>
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
     </div>
 
 </div>
@@ -147,7 +187,7 @@
         </form>
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -176,7 +216,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -223,7 +263,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -264,7 +304,7 @@
     </div>
 
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -306,7 +346,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -353,7 +393,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -403,7 +443,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -474,7 +514,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -526,7 +566,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -570,7 +610,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -620,7 +660,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -684,7 +724,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -731,7 +771,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -774,7 +814,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -816,7 +856,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -861,7 +901,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -900,7 +940,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -942,7 +982,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -983,7 +1023,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1031,7 +1071,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1084,7 +1124,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1140,7 +1180,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1148,6 +1188,12 @@
 
 <!-- end machine cups & coins -->
 
+
+
+
+
+
+    </div> <!-- end jqm pages container -->
 
 
 
