--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <a id="modalDialogRedirect" href="#" data-role="button">OK</a>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
     </div>
 
 </div>
@@ -131,7 +131,7 @@
         <a id="modalDialogBackRedirect" href="#" data-role="button" data-rel="back">OK</a>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
     </div>
 
 </div>
@@ -150,7 +150,7 @@
         <a id="modalDialogCancelCancel" href="#" data-role="button" data-rel="back" transition="flow">Cancel</a>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
     </div>
 
 </div>
@@ -187,7 +187,7 @@
         </form>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -216,7 +216,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -263,7 +263,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -304,7 +304,7 @@
     </div>
 
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -346,7 +346,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -393,7 +393,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -443,7 +443,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -514,7 +514,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -566,7 +566,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -610,7 +610,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -660,7 +660,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -724,7 +724,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -771,7 +771,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -814,7 +814,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -856,7 +856,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -901,7 +901,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -940,7 +940,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -982,7 +982,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -1023,7 +1023,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1071,7 +1071,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1124,7 +1124,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1180,7 +1180,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
