--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <a id="modalDialogRedirect" href="#" data-role="button">OK</a>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
     </div>
 
 </div>
@@ -131,7 +131,7 @@
         <a id="modalDialogBackRedirect" href="#" data-role="button" data-rel="back">OK</a>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
     </div>
 
 </div>
@@ -150,7 +150,7 @@
         <a id="modalDialogCancelCancel" href="#" data-role="button" data-rel="back" transition="flow">Cancel</a>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
     </div>
 
 </div>
@@ -187,7 +187,7 @@
         </form>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -214,7 +214,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -266,7 +266,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -305,7 +305,7 @@
     </div>
 
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -345,7 +345,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -392,7 +392,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -442,7 +442,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -511,7 +511,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -565,7 +565,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -609,7 +609,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -672,7 +672,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -715,7 +715,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -754,7 +754,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -799,7 +799,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -860,7 +860,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
